<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_margin="24dp"
        android:textSize="14sp"
        android:fontFamily="sans-serif-regular"
        android:textColor="@color/black"
        android:text="@string/welcome_text"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="24dp"
        android:orientation="vertical">

        <Button
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:id="@+id/login_button"
            android:textSize="14dp"
            android:fontFamily="sans-serif-regular"
            android:textColor="@color/black"
            android:background="@drawable/boxed_button"
            android:text="@string/welcome_login_button"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:id="@+id/register_button"
            android:textSize="14dp"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif-regular"
            android:textColor="@color/black"
            android:background="@drawable/boxed_button"
            android:text="@string/welcome_register_button"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:id="@+id/guest_button"
            android:fontFamily="sans-serif-regular"
            android:textSize="14dp"
            android:textColor="@color/black"
            android:layout_marginTop="16dp"
            android:background="@drawable/boxed_button"
            android:text="@string/welcome_guest_button"/>
    </LinearLayout>

</RelativeLayout>
