<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clickable="true"
    android:focusable="true"
    android:onClick="hideKeyboard"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="vertical">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/edittext_height"
            android:background="@drawable/boxed_background"
            android:layout_marginBottom="16dp"
            android:padding="16dp"
            android:textSize="14dp"
            android:hint="@string/username_hint"
            android:textColorHint="@color/hint_color"
            android:id="@+id/username"
            android:inputType="textEmailAddress"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/password_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            app:hintEnabled="false"
            app:passwordToggleDrawable="@drawable/display_password_selector">

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edittext_height"
                android:labelFor="@id/password"
                android:background="@drawable/boxed_background"
                android:fontFamily="sans-serif"
                android:inputType="textPassword"
                android:padding="16dp"
                android:textColorHint="@color/hint_color"
                android:hint="@string/password_hint"
                android:textSize="14sp"/>

        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

    <Button
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:id="@+id/login_button"
        android:textSize="14dp"
        android:enabled="false"
        android:textColor="@drawable/button_text_selector"
        android:background="@drawable/boxed_button_selector"
        android:text="@string/login_button"/>
    </LinearLayout>
</RelativeLayout>
