<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.hro.ictlab.ict_lab.remote_control.RemoteControlActivity">

    <nl.boydroid.BarcodeCaptureView
        android:id="@+id/scanner_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/remote_control_view"
        android:background="@color/white"
        android:visibility="gone">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/connected_with"
        android:layout_centerHorizontal="true"
        android:layout_margin="24dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/connection_text"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <ImageView
        android:id="@+id/control_reset"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_centerInParent="true"
        android:layout_margin="32dp"
        android:clickable="true"
        android:src="@drawable/control_reset" />

    <ImageView
        android:id="@+id/control_right"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@+id/control_reset"
        android:clickable="true"
        android:src="@drawable/control_right" />

    <ImageView
        android:id="@+id/control_down"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_below="@+id/control_reset"
        android:layout_centerHorizontal="true"
        android:clickable="true"
        android:src="@drawable/control_down" />

    <ImageView
        android:id="@+id/control_left"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_centerVertical="true"
        android:layout_toLeftOf="@+id/control_reset"
        android:clickable="true"
        android:src="@drawable/control_left" />

    <ImageView
        android:id="@+id/control_up"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_above="@+id/control_reset"
        android:layout_centerHorizontal="true"
        android:clickable="true"
        android:src="@drawable/control_up" />

    <Button
        android:id="@+id/connect_again_button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:layout_alignParentBottom="true"
        android:layout_margin="24dp"
        android:background="@drawable/boxed_button"
        android:clickable="true"
        android:fontFamily="sans-serif-regular"
        android:text="@string/connect_again_button"
        android:textColor="@color/black"
        android:textSize="14dp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:id="@+id/scanner_explanation_layout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_margin="24dp"
            android:textSize="14sp"
            android:fontFamily="sans-serif-regular"
            android:textColor="@color/black"
            android:text="@string/remote_control_explanation"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"
                android:id="@+id/start_scan_button"
                android:fontFamily="sans-serif-regular"
                android:layout_alignParentBottom="true"
                android:textSize="14dp"
                android:textColor="@color/black"
                android:layout_margin="24dp"
                android:background="@drawable/boxed_button"
                android:text="@string/scan_qr_code_button"/>

    </RelativeLayout>

</FrameLayout>
